  Windows (in Linux since beta5): Estonian (et), Bulgarian (bg), Georgian (ka),
  Lithuanian (lt), Slovak (sk), Oriya (or)
* NEW: ALT+D shortcut to give focus to the searchbar (ID: 3475647)
* NEW: --current option to "add" command in kiwix-manage to set the ZIM file a current
* NEW: Self-extracting installer for MS/Windows
* NEW: Ask before downloading XML library files (ID: 3442087)
* NEW: kiwix-serve able to deal directly with library XML files
* NEW: kiwix-serve able to deal with many content in one instance
* NEW: Speed-up begin of downloads by removing file pre-allocation
* NEw: Reduce GNU/Linux Package file by 30% (by removing the symbol table of XPCOM components)
* NEW: Allow compilation against Gecko SDK 9.0 and further (xpidl binary was removed)
* NEW: Add support for HTML5 video/audio
* NEW: Audible/Mute contextual menuitem for HTML5 videos
* NEW: Default content icon in the library (ID: 3488268)
* NEW: Compute 'fake' title from the filename if no title metatadata in ZIM (ID: 3488268)
* NEW: Replacement of "fastjar" by "zip" (better/common dependence)
* NEW: Use new (20% smaller) IETF normalized Metalink format (meta4) instead of old (v3) Metalink
* NEW: Open specific article via command prompt using "articleByUrl" & "articleByTitle" (ID: 3484628)
* NEW: Fulltext search engine index ~4x faster (depending of the number of cores)
* NEW: kiwix-set-fileassoc.bat Windows script to setup zim-kiwix file association for "portable" usage
* NEW: GNU/Linux static compiled release ~50% smaller than before
* NEW: OSX universal binary package (x86_32 & x86_64)
* NEW: kiwix-serve command line option --attachToProcess

Kiwix 0.9 beta5
* FIXED: letton language menu item (ID: 3439113)
* FIXED: Duplicates in publisher & language filters in the content manager (ID: 3439108)	
* FIXED: Many localisation files which were broken due to a buggy script (ID: 3440627)
* FIXED: Wrong behaviour in case of two different portable kiwix consecutive runs (ID: 3442083)